sidebar, register, styles fix

--- a/src/assets/form.scss
+++ b/src/assets/form.scss
@@ -63,6 +63,10 @@
    // .form__input
    &__input {
    }
+   // form__error
+   &__error {
+      color: $accentColor; 
+   }
    // .form__button
    &__button {
       display: block;
