--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -29,7 +29,7 @@ $blue: #4a6fb5;
 $mainText: #000;
 $light: #03d15f;
 $white: #c2c2c9; 
-$accentColor: red; 
+$accentColor: rgb(240, 57, 37); 
 $grey: #4f678b;
 //========================================================================================================================================================
 
