--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -26,6 +26,7 @@ a {
 $backgroundColor: #221c36;
 $darkBlue: #191826;
 $blue: #4a6fb5;
+$lightBlue: #0074e0;
 $mainText: #000;
 $light: #03d15f;
 $white: #c2c2c9; 
