upload features added

--- a/src/components/Sidebar/sidebar-main.scss
+++ b/src/components/Sidebar/sidebar-main.scss
@@ -76,6 +76,7 @@
          gap: 10px;
          padding: 20px 0px 20px 16px;
          margin: 0 -16px 16px -16px;
+         overflow-x: hidden;
       }
       // .sidebar__user-icon
       &__user-icon {
@@ -91,6 +92,11 @@
          color: $white;
          opacity: 0;
          transition: 0.2s ease-out 0s;
+         // padding-right: 10px;
+         margin-right: 10px;
+         white-space: nowrap;
+         overflow: hidden;
+         text-overflow: ellipsis;
       }
 
    // .sidebar__body
