--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -13,9 +13,7 @@ button {
    background: none;
    color: none;
 }
-input {
 
-}
 li {
    list-style: none;
 }
@@ -37,11 +35,14 @@ $grey: #4f678b;
 //Markup========================================================================================================================================================
 html,
 body {
-  height: 100%;
+//   height: 100%;
   color: $white;
 }
 body{
-background: url('@/assets/img/bg.webp') left / cover no-repeat;
+background: url('@/assets/img/bg.webp') left no-repeat;
+background-size: cover;
+// background: #000;
+
   &.lock {
 		overflow: hidden;
 		touch-action: none;
@@ -56,6 +57,7 @@ svg {
    display: flex;
    main {
       flex: 1 1 0;
+  min-height: 100vh;
       // padding: 32px;
       @media (max-width: 768px) {
          padding-left: 96px;
@@ -72,6 +74,7 @@ svg {
 }
 .main {
   flex: 1 1 0;
+  min-height: 100vh;
 }
 [class*="__container"] {
   max-width: 1270px;
