--- a/src/components/Sidebar/SidebarMenu/sidebar-menu.scss
+++ b/src/components/Sidebar/SidebarMenu/sidebar-menu.scss
@@ -83,6 +83,11 @@
       background-color: rgba(79, 103, 139, 0.16);
       border-right: 5px solid $light;
       box-shadow: 0 0 2px $light;
+      svg {
+         path {
+            fill: $light;
+         }
+      }
    }
 
 }
