--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -83,3 +83,28 @@ svg {
   margin: 0 auto;
   padding: 0 15px;
 }
+[class*="__container-lg"] {
+  max-width: 1670px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+/* width */
+::-webkit-scrollbar {
+   width: 5px;
+ }
+ 
+ /* Track */
+ ::-webkit-scrollbar-track {
+   // background: rgb(51, 51, 51);
+ }
+ 
+ /* Handle */
+ ::-webkit-scrollbar-thumb {
+    background: $grey;
+ }
+ 
+ /* Handle on hover */
+ ::-webkit-scrollbar-thumb:hover {
+    background: $light;
+ }
