album view added working playlist, upload fix, ui fix

--- a/src/assets/forms/upload-form.scss
+++ b/src/assets/forms/upload-form.scss
@@ -10,7 +10,7 @@ input[type="file"] {
        &__container {}
        // .upload__body
        &__body {
-       margin: 50px 0;
+       margin: 50px 0px 120px 0;
      }
        // .upload__form
        &__form {}
