--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -1,142 +1,208 @@
-.wrapper {
-    display: flex;
-    justify-content: center;
-    
-    // .wrapper__container
-    &__container {
+.slider-bar {
+	display: flex;
+	width: 100%;
+	padding-left: 0 !important;
+	// .slider-bar__container
+
+	&__container {
         width: 100%;
-    }
-    &__group {
-        display: flex;
-        justify-content: space-between;
-        width: 100%;
+	}
+
+    &__album {
         
     }
+    // .slider-bar__group
+    
+	&__group {
+		display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+	}
 
-    &__title {
-        @media (max-width: 375px) {
+	// .slider-bar__group-title
+
+	&__group-title {
+        margin-left: 2rem;
+		@media (max-width: 375px) {
             font-size: 18px;
         }
-    }
-    &__dropdown {
-        position: relative;
-        display: inline-block;
-        align-self: flex-end;
-        margin-right: 3.8rem;
-        &:hover .wrapper__dropdown-content {
-            display: block;
+	}
+
+	// .slider-bar__group-link
+
+	&__group-link {
+		color: $white;
+        margin-right: 4rem;
+        @media (max-width: 320px) {
+            margin-right: 2rem;
         }
-    }
-    &__dropdbtn {
-        color: white;
-        font-size: 16px;
-        border: none;
-        &:hover {
-            color: $light;
-            transition: 0.2s
+	}
+
+	// .slider-bar__track
+
+	&__track {
+	}
+
+	// .slider-bar__album-tracks
+
+	&__album-tracks {
+        margin: 0 0 0 20px;
+        @media (max-width: 375px) {
+            margin: 0;
         }
-    }
-    &__dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #0d0d13d8;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
-        a {
-            color: #fff;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            border: 1px solid transparent;
-            &:hover {
-                border: 1px solid #03d15f;
-                transition: 0.2s;
-            }
-        }
-    }
+		.track {
+			display: flex;
+			max-width: 100%;
+			transition: all 0.3s ease 0s;
+			cursor: pointer;
+			border-bottom: 1px solid $grey;
+			border-bottom: 2px solid rgba(255, 255, 255, 0.09);
+			&:last-child {
+				border-bottom: none;
+			}
+			&:hover{
+				background-color: rgba(255, 255, 255, 0.09);              
+			}
+			// .track__body
+		
+			&__body {
+				display: flex;
+				align-items: center;
+				width: 100%;
+				height: 100%;
+				gap: 20px;
+				padding: 10px;
+                @media (max-width: 375px) {
+                    padding: 10px 0 0 0;
+                    gap: 8px;
+                }
+			}
+		
+			// .track__img
+		
+			&__img {
+				position: relative;
+				display: flex;
+				align-items: center;
+				width: 80px;
+				height: 80px;
+				img {
+					width: 70px;
+					height: 100%;
+					object-fit: cover;
+					border-radius: 0px;
+            	}
+			}
+		
+			// .track__controls
+		
+			&__controls {
+				display: none;
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translateX(-50%);
+			}
+		
+			// .track__info
+		
+			&__info {
+				display: flex;
+				flex-direction: column;
+				width: 100%;
+				gap: 5px;
+				margin-top: 10px;
+				@media  (max-width: 375px) {
+					font-size: 14px;
+				}
+			}
+		
+			// .track__name
+		
+			&__name {
+				font-weight: 700;
+				color: #fff;
+				@media  (max-width: 375px) {
+					font-size: 12px;
+            	}
+			}
+		
+			// .track__author
+		
+			&__author {
+				white-space: nowrap;
+				@media (max-width: 425px){
+					white-space: normal; 
+				}
+			}
+		}
+	}
+}
+.carousel {
 }
 .album {
-    position: relative;
+	position: relative;
     display: grid;
-    justify-items: center;
-    @media (max-width: 425px) {
-        width: 205px;
-    }
-    @media (max-width: 375px) {
-        width: 160px;
-    }
-    @media (max-width: 320px) {
-        width: 136px;
-    }
-    // margin: 0 auto;
-    // .album__body
+    justify-items: start;
+    
+	&__body {
+		position: relative;
+        display: grid;
+        justify-content: center;
+        min-width: 100%;
+	}
 
-    &__body {
-        position: relative;
-        width: 100%;
-        max-width: 200px;
-        @media (max-width: 425px) {
-            width: 180px;
-        }
-    }
+	// .album__img
 
-    // .album__img
-
-    &__img {
-        position: relative;
+	&__img {
+		position: relative;
         z-index: 5;
         width: 100%;
         height: 200px;
         img {
-            width: 100%;
+            width: 200px;
             height: 100%;
             object-fit: cover;
             border-radius: 10px;
             @media (max-width: 768px) {
-                width: 180px;
-                border-radius: 10px;
+                width: 170px;
             }
-            @media  (max-width: 375px) {
+            @media (max-width: 320px) {
                 width: 150px;
             }
         }
-    }
+	}
 
-    // .album__controls
+	// .album__controls
 
-    &__controls {
-    }
-    
+	&__controls {
+	}
 
-    // .album__info-page
+	// .album__info-page
 
-    &__info-page {
-        display: flex;
+	&__info-page {
+		display: flex;
         flex-direction: column;
-        gap: 5px;
-    }
+        gap: 2px;
+        margin-left: 1px;
+	}
 
-    // .album__name
+	// .album__name
 
-    &__name {
-        font-weight: 700;
+	&__name {
+		font-weight: 700;
+        font-size: 18px;
         color: #fff;
-    }
+	}
 
-    // .album__band
+	// .album__band
 
-    &__band {
-        font-size: 14px;
-    }
-
-    // .album__tracks
-
-    &__tracks {
-    }
+	&__band {
+		font-size: 14px;
+	}
 }
 .controls {
-    position: absolute;
+	position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
@@ -145,10 +211,10 @@
     pointer-events: none;
     opacity: 0;
     background: linear-gradient(180deg, rgba(25, 24, 38, 0.407) 60%, rgba(74, 111, 181, 0.283));
-    // .controls__more
+	// .controls__more
 
-    &__more {
-        pointer-events: all;
+	&__more {
+		pointer-events: all;
         position: absolute;
         top: 5px;
         right: 5px;
@@ -167,12 +233,12 @@
                fill: $white;
             }
         }
-    }
+	}
 
-    // .controls__play
+	// .controls__play
 
-    &__play {
-        pointer-events: all;
+	&__play {
+		pointer-events: all;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -186,104 +252,5 @@
         }
     }
 }
-.tack {
-    display: grid;
-    justify-items: center;
-    margin: 0 auto;
-    // .tack__container
-
-    &__wrapper {
-    }
-}
-.album-tracks {
-}
 .carousel-track {
-}
-
-.album-tracks {
-
-    .track {
-        display: flex;
-        max-width: 100%;
-        transition: all 0.3s ease 0s;
-        cursor: pointer;
-        // border-bottom: 1px solid $grey;
-        border-bottom: 2px solid rgba(255, 255, 255, 0.09);
-        &:last-child {
-            border-bottom: none;
-        }
-        &:hover{
-            background-color: rgba(255, 255, 255, 0.09);              
-        }
-        &__title {
-            @media (max-width: 375px) {
-                font-size: 18px;
-            }
-        }
-        &__body {
-            display: flex;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-            gap: 15px;
-            padding: 10px 0px 10px 10px;
-        }
-        // .track__img
-        &__img {
-            position: relative;
-            display: flex;
-            align-items: center;
-            width: 80px;
-            height: 80px;
-            img {
-                width: 100%;            
-                height: 100%;
-                object-fit: cover;
-                border-radius: 0px;
-                @media  (max-width: 425px) {
-                    width: 80px;
-                    height: 80px;
-                }
-                @media  (max-width: 375px) {
-                    width: 60px;
-                    height: 80px;
-                }
-            }
-        }
-        // .track__info
-        &__info {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            gap: 5px;
-            // margin-top: 10px;
-            @media  (max-width: 375px) {
-                font-size: 14px;
-            }
-        }
-        // .track__name
-        &__name {
-            font-weight: 700;
-            color: #fff;
-            @media  (max-width: 375px) {
-                font-size: 12px;
-            }
-            
-        }
-        // .track__controls
-        &__controls {
-            display: none;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-        // .track__author
-        &__author {
-            white-space: nowrap;
-            @media (max-width: 425px){
-                white-space: normal; 
-            }
-        }
-    }
 }
