--- a/src/components/Tracks/track-styles.scss
+++ b/src/components/Tracks/track-styles.scss
@@ -1,19 +1,15 @@
 .wrapper {
     display: flex;
     align-items: center;
-    // background: rgb(2,2,14);
     background: linear-gradient(24deg, rgba(2,2,14,1) 2%, rgba(3,10,20,1) 49%, rgba(53,76,121,1) 98%);
 		// .wrapper__container
 	&__container {
-        display: grid;
-        grid-template-columns: 140px 1fr;
-        margin: 15px 0px 15px 0px;
 	}
 
     &__tracks {
         display: flex;
         flex-wrap: wrap;
-        justify-content: flex-start;
+        justify-content: center;
         gap: 15px;
         @media (max-width: 425px) {
             display: flex;
@@ -25,6 +21,7 @@
     &__genre {
         display: flex;
         flex-direction: column;
+        width: 100%;
         gap: 10px;
         div {
             small {
@@ -68,9 +65,10 @@
         }
     }
    // .track__body
-   &__body {
-      position: relative;
-      &:hover {
+    &__body {
+        max-width: 200px;
+        position: relative;
+        &:hover {
             .controls {
                 opacity: 1;
             }
@@ -80,7 +78,7 @@
             }
             .controls__play {
             }
-        }
+            }
     }
    // .track__img
    &__img {
@@ -174,90 +172,31 @@
         pointer-events: all;
     }
 }
-.album-tracks {
-
-    .track {
+.all-genre {
+    margin-top: 20px;
+		// .slider-bar__item
+    &__title {
+        margin-bottom: 30px;
+    }
+    &__item {
+        display: inline-block;
+        padding: 0px 20px 10px 0px;
+    }
+    
+    // .slider-bar__link
+    
+    &__name {
         display: flex;
-        max-width: 100%;
-        // transition: all 0.3s ease 0s;
+        justify-content: start;
+        align-items: center;
+        min-height: 48px;
+        // width: 100%;
+        min-width: 200px;
+        padding: 0px 0px 0px 20px;
+        border-radius: 4px;
+        border-left: 6px solid yellow;
+        background: rgb(9, 9, 25);
         cursor: pointer;
-        // border-bottom: 1px solid $grey;
-        border-bottom: 2px solid rgba(255, 255, 255, 0.09);
-        &:last-child {
-            border-bottom: none;
-        }
-        &:hover{
-            background-color: rgba(255, 255, 255, 0.09);              
-        }
-        &__title {
-            @media (max-width: 375px) {
-                font-size: 18px;
-            }
-        }
-        &__body {
-            display: flex;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-            gap: 15px;
-            padding: 10px 0px 10px 10px;
-        }
-        // .track__img
-        &__img {
-            position: relative;
-            display: flex;
-            align-items: center;
-            width: 80px;
-            height: 80px;
-            img {
-                width: 100%;            
-                height: 100%;
-                object-fit: cover;
-                border-radius: 0px;
-                @media  (max-width: 425px) {
-                    width: 80px;
-                    height: 80px;
-                }
-                @media  (max-width: 375px) {
-                    width: 60px;
-                    height: 80px;
-                }
-            }
-        }
-        // .track__info
-        &__info {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            gap: 5px;
-            // margin-top: 10px;
-            @media  (max-width: 375px) {
-                font-size: 14px;
-            }
-        }
-        // .track__name
-        &__name {
-            font-weight: 700;
-            color: #fff;
-            @media  (max-width: 375px) {
-                font-size: 12px;
-            }
-            
-        }
-        // .track__controls
-        &__controls {
-            display: none;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-        // .track__author
-        &__author {
-            white-space: nowrap;
-            @media (max-width: 425px){
-                white-space: normal; 
-            }
-        }
+        color: $white;
     }
 }
