--- a/src/assets/forms/upload-form.scss
+++ b/src/assets/forms/upload-form.scss
@@ -75,7 +75,7 @@ input[type="file"] {
        &__body {
        display: flex;
        justify-content: space-between;      
-       @media (max-width: 768px){
+       @media (max-width: 992px){
            flex-direction: column;
        }
       
@@ -87,11 +87,17 @@ input[type="file"] {
        flex-direction: column;
        gap: 10px;
      }
-       // .upload-form__item
-       &__item {
-       display: flex;
-       flex-direction: column;
-       gap: 10px;
+      // .upload-form__group
+     &__group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+     }
+      // .upload-form__item
+      &__item {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
      }
        // .upload-form__label
        &__label {
@@ -190,15 +196,15 @@ input[type="file"] {
        flex: 0 1 60%;
        display: flex;
        flex-direction: column;
-       justify-content:center;align-items: center;
+       justify-content:center;
+       align-items: center;
        align-self: flex-start;
        padding: 32px;
-       // backdrop-filter: blur(3px);
-       // -webkit-backdrop-filter: blur(3px);
-       // background-color: rgba(26, 26, 42, 0.9);
-       // box-shadow: inset 0 8px 32px rgb(2, 4, 24);
        border-radius: 10px;
        transition: 0.2s ease-out;
+       @media (max-width: 992px){
+         padding: 16px 0px;
+      }
      }
      // .upload-form__wrap
      &__wrap {
@@ -244,6 +250,10 @@ input[type="file"] {
            width: 200px;
            height: 200px;
          }
+         @media (max-width: 400px){
+           width: 200px;
+           height: 200px;
+         }
        }
      }
      // .upload-form__delete
@@ -265,4 +275,12 @@ input[type="file"] {
        // .checks__label
        &__label {}
  }
-
+ .fade-enter-active,
+ .fade-leave-active {
+   transition: opacity 0.5s ease;
+ }
+ 
+ .fade-enter-from,
+ .fade-leave-to {
+   opacity: 0;
+ }
