--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -41,7 +41,7 @@ body {
 body{
 background: url('@/assets/img/bg.webp') left no-repeat;
 background-size: cover;
-// background: #000;
+// background: linear-gradient(90deg, rgba(6, 34, 50, 0.9) 0%, rgba(2, 0, 9, 0.9) 100%);
 
   &.lock {
 		overflow: hidden;
@@ -96,15 +96,15 @@ svg {
  
  /* Track */
  ::-webkit-scrollbar-track {
-   // background: rgb(51, 51, 51);
+   background: rgb(21, 21, 21);
  }
  
  /* Handle */
  ::-webkit-scrollbar-thumb {
-    background: $grey;
+    background: rgba(88, 88, 88, 0.563);
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
-    background: $light;
+    background: $grey;
  }
