--- a/src/assets/forms/upload-form.scss
+++ b/src/assets/forms/upload-form.scss
@@ -6,35 +6,40 @@ input[type="file"] {
    border: none;
  }
  .upload {
-       // .upload__container
-       &__container {}
-       // .upload__body
-       &__body {
-       margin: 50px 0px 120px 0;
-     }
-       // .upload__form
-       &__form {}
-     // .upload__title
-       &__title {
-       margin-bottom: 20px;
-     }
-       // .upload__btn
-       &__btn {
-       margin-top: 15px;
-       display: flex;
-       justify-content: center;
-       font-weight: 700;
-       padding: 15px 25px;
-       min-width: 200px;
-       color: $white;
-       border-radius: 5px;
-       border: 1px solid $grey;
-       transition: 0.3s ease-out 0s;
-       overflow: hidden;
-       &:hover {
-         background-color: #111127;
-       }
-     }
+    // background: url('@/assets/img/bg.webp') left no-repeat;
+    // background-size: cover;
+    // background: rgb(29,39,59);
+    background: linear-gradient(45deg, rgba(7, 11, 23, 0.902) 0%,  rgba(23, 12, 54, 0.802) 100%);
+    // .upload__container
+    &__container {}
+    // .upload__body
+    &__body {
+    margin: 50px 0px 120px 0;
+    }
+    // .upload__form
+    &__form {}
+    // .upload__title
+    &__title {
+    margin-bottom: 20px;
+    font-size: 20px;
+    }
+    // .upload__btn
+    &__btn {
+      margin-top: 15px;
+      display: flex;
+      justify-content: center;
+      font-weight: 700;
+      padding: 15px 25px;
+      min-width: 200px;
+      color: $white;
+      border-radius: 5px;
+      border: 1px solid $grey;
+      transition: 0.3s ease-out 0s;
+      overflow: hidden;
+      &:hover {
+        background-color: #111127;
+      }
+  }
     // .upload__back
     &__back {
       display: inline-block;
@@ -55,15 +60,21 @@ input[type="file"] {
       margin-top: 10px;
       color: $light;
     }
+    // .upload__bg
+    &__bg {
+      background: url('@/assets/img/bg.webp') left no-repeat;
+      background-size: cover;
+    }
  }
  .upload-form {
     padding: 32px;
-    backdrop-filter: blur(3px);
-    -webkit-backdrop-filter: blur(3px);
-    background-color: rgba(21, 21, 22, 0.3);
+    backdrop-filter: blur(50px);
+    -webkit-backdrop-filter: blur(50px);
+    background-color: rgba(21, 21, 22, 0.4);
     box-shadow: 0 8px 32px rgb(2, 4, 24);
     border-bottom: 2px solid rgba(255, 255, 255, 0.09);
     transition: 0.2s ease-out;
+
     @media (max-width: 560px){
        padding: 32px 10px;
        background-color: transparent;
