upd carousel adaptive

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -30,6 +30,12 @@ $light: #03d15f;
 $white: #c2c2c9; 
 $accentColor: rgb(240, 57, 37); 
 $grey: #4f678b;
+
+$rainbow_segments: 10;
+$s-min: 30;
+$s-max: 90;
+$l-min: 10;
+$l-max: 90;
 //========================================================================================================================================================
 
 //Markup========================================================================================================================================================
