--- a/src/components/Slider/slider-styles/slider-album.scss
+++ b/src/components/Slider/slider-styles/slider-album.scss
@@ -1,6 +1,13 @@
 .slider-bar {
-	display: flex;
-	width: 100%;
+
+    // .slider-bar__album
+
+    &__album {
+        margin-bottom: 50px;
+    }
+}
+
+.album {
 	padding-left: 0 !important;
 	// .slider-bar__container
 
@@ -12,21 +19,54 @@
         
     }
     // .slider-bar__group
-    
-	&__group {
-		display: flex;
+    &__title {
+        display: flex;
         justify-content: space-between;
-        align-items: flex-end;
-	}
+        margin: 0px 10px 20px 0px;
+    }
+    &__subtitle {
+        display: flex;
+        justify-content: space-between;
+        font-size: 30px;     
+    }
 
-	// .slider-bar__group-title
-
-	&__group-title {
-        margin-left: 2rem;
-		@media (max-width: 375px) {
-            font-size: 18px;
+    &__buttons {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        max-width: 100%;
+        gap: 16px;
+        @media (max-width: 420px) {
+            display: flex;
+            gap: 6px;
         }
-	}
+        button {
+            display: inline-block;
+            height: 40px;
+            min-width: 40px;
+            border-radius: 50%;
+            border: 1px solid rgba(255, 255, 255, 0.446);
+            background-color: #000;
+            color: $white;
+            white-space: nowrap;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &:hover {
+                background-color: rgba(44, 44, 44, 0.793);
+            }
+            svg {
+                width: 16px;
+                @media (max-width: 420px) {
+                    width: 12px;
+                }
+            }
+            @media (max-width: 420px) {
+                height: 30px;
+                min-width: 30px;
+            }
+        } 
+    }
 
 	// .slider-bar__group-link
 
@@ -37,69 +77,75 @@
             margin-right: 2rem;
         }
 	}
-}
-
-.album {
-	position: relative;
-    display: grid;
-    justify-items: start;
-    
-	&__body {
-		position: relative;
+    &__main {
+        position: relative;
         display: grid;
-        justify-content: center;
-        min-width: 100%;
-	}
-
-	// .album__img
-
-	&__img {
-		position: relative;
-        z-index: 5;
+        grid-template-columns: repeat(auto-fill,minmax(210px, 220px));
+        width: 100%;
+        margin-right: 10px;
+    }
+    &__body {
+        position: relative;
+        width: 100%;
+    }
+    
+    // .album__img
+    
+    &__img {
         width: 100%;
         height: 200px;
+        position: relative;
+        z-index: 5;
+        margin-bottom: 10px;
         img {
-            width: 200px;
+            width: 100%;
             height: 100%;
+            max-height: 100%;
             object-fit: cover;
             border-radius: 10px;
-            @media (max-width: 768px) {
-                width: 170px;
-            }
-            @media (max-width: 320px) {
-                width: 150px;
-            }
         }
-	}
-
-	// .album__controls
-
-	&__controls {
-	}
-
-	// .album__info-page
-
-	&__info-page {
-		display: flex;
+    }
+    
+    // .album__controls
+    
+    &__controls {
+    }
+    
+    // .album__info-page
+    
+    &__info-page {
+        display: flex;
         flex-direction: column;
+        align-items: flex-start;
         gap: 2px;
         margin-left: 1px;
-	}
+        width: 200px;
+    }
+    
+    // .album__name
+    
+    &__name {
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
 
-	// .album__name
 
-	&__name {
-		font-weight: 700;
+        text-align: left;
+        font-weight: 700;
         font-size: 18px;
         color: #fff;
-	}
-
-	// .album__band
-
-	&__band {
-		font-size: 14px;
-	}
+    }
+    
+    // .album__band
+    
+    &__band {
+        font-size: 14px;
+    }
 }
+
+
 .controls {
 	position: absolute;
     width: 100%;
@@ -152,4 +198,9 @@
     }
 }
 .carousel-track {
+}
+
+.carousel__slide {
+    display: flex;
+    justify-content: flex-start;
 }
