--- a/src/components/Slider/slider-styles/slider-track.scss
+++ b/src/components/Slider/slider-styles/slider-track.scss
@@ -2,42 +2,6 @@
 	display: flex;
 	width: 100%;
 	padding-left: 0 !important;
-	// .slider-bar__container
-
-	&__container {
-        width: 100%;
-	}
-
-    &__album {
-        
-    }
-    // .slider-bar__group
-    
-	&__group {
-		display: flex;
-        justify-content: space-between;
-        align-items: flex-end;
-	}
-
-	// .slider-bar__group-title
-
-	&__group-title {
-        margin-left: 2rem;
-		@media (max-width: 375px) {
-            font-size: 18px;
-        }
-	}
-
-	// .slider-bar__group-link
-
-	&__group-link {
-		color: $white;
-        margin-right: 4rem;
-        @media (max-width: 320px) {
-            margin-right: 2rem;
-        }
-	}
-
 	// .slider-bar__track
 
 	&__track {
@@ -46,13 +10,9 @@
 	// .slider-bar__album-tracks
 
 	&__album-tracks {
-        margin: 0 0 0 20px;
-        @media (max-width: 375px) {
-            margin: 0;
-        }
+		width: 100%;
 	}
 }
-
 .track {
 	display: flex;
 	max-width: 100%;
@@ -66,6 +26,73 @@
 	&:hover{
 		background-color: rgba(255, 255, 255, 0.09);              
 	}
+	// .track__title
+
+	&__title {
+        display: flex;
+        justify-content: space-between;
+        margin: 0 10px 20px 10px;
+    }
+
+	// .track__subtitle
+
+	&__subtitle {
+        display: flex;
+        justify-content: space-between;
+        font-size: 30px;
+        
+    }
+
+	// .track__buttons
+
+	&__buttons {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        max-width: 100%;
+        gap: 16px;
+        @media (max-width: 420px) {
+            display: flex;
+            gap: 6px;
+        }
+        button {
+            display: inline-block;
+            height: 40px;
+            min-width: 40px;
+            border-radius: 50%;
+            border: 1px solid rgba(255, 255, 255, 0.446);
+            background-color: #000;
+            color: $white;
+            white-space: nowrap;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+			&:hover {
+                background-color: rgba(44, 44, 44, 0.793);
+            }
+            svg {
+                width: 16px;
+                @media (max-width: 420px) {
+                    width: 12px;
+                }
+            }
+            @media (max-width: 420px) {
+                height: 30px;
+                min-width: 30px;
+            }
+        } 
+    }
+
+	// .track__prev
+
+	&__prev {
+	}
+
+	// .track__next
+
+	&__next {
+	}
+
 	// .track__body
 
 	&__body {
@@ -73,7 +100,7 @@
 		align-items: center;
 		width: 100%;
 		height: 100%;
-		gap: 20px;
+		gap: 10px;
 		padding: 10px;
 		@media (max-width: 375px) {
 			padding: 10px 0 0 0;
@@ -90,8 +117,8 @@
 		width: 80px;
 		height: 80px;
 		img {
-			width: 70px;
-			height: 100%;
+			width: 80px;
+			height: 80px;
 			object-fit: cover;
 			border-radius: 0px;
 		}
@@ -112,6 +139,7 @@
 	&__info {
 		display: flex;
 		flex-direction: column;
+		text-align: start;
 		width: 100%;
 		gap: 5px;
 		margin-top: 10px;
@@ -138,4 +166,9 @@
 			white-space: normal; 
 		}
 	}
+}
+
+.carousel__slide {
+    display: flex;
+    justify-content: flex-start;
 }
