--- a/src/components/TracksAndAlbums/track-styles.scss
+++ b/src/components/TracksAndAlbums/track-styles.scss
@@ -1,26 +1,15 @@
-.wrapper {
-    display: flex;
-    align-items: center;
-    background: linear-gradient(24deg, rgba(2,2,14,1) 2%, rgba(3,10,20,1) 49%, rgba(53,76,121,1) 98%);
-		// .wrapper__container
-	&__container {
-	}
-
-    &__tracks {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 15px;
-        @media (max-width: 425px) {
-            display: flex;
-            justify-content: center;
-        }
-        // grid-template-columns: repeat(auto-fill,minmax(200px, 1fr));
+.tracks {
+		// .tracks__container
+    &__title {
+        margin-bottom: 25px;
+    }
+    &__body {
+        display: grid;
+        grid-template-columns: repeat(auto-fill,minmax(200px, 1fr));
+        gap: 20px;
     }
 
     &__genre {
-        display: flex;
-        flex-direction: column;
         width: 100%;
         gap: 10px;
         div {
@@ -65,7 +54,7 @@
         }
     }
    // .track__body
-    &__body {
+    &__play {
         max-width: 200px;
         position: relative;
         &:hover {
@@ -170,33 +159,5 @@
 		&__pause {
         display: none;
         pointer-events: all;
-    }
-}
-.all-genre {
-    margin-top: 20px;
-		// .slider-bar__item
-    &__title {
-        margin-bottom: 30px;
-    }
-    &__item {
-        display: inline-block;
-        padding: 0px 20px 10px 0px;
-    }
-    
-    // .slider-bar__link
-    
-    &__name {
-        display: flex;
-        justify-content: start;
-        align-items: center;
-        min-height: 48px;
-        // width: 100%;
-        min-width: 200px;
-        padding: 0px 0px 0px 20px;
-        border-radius: 4px;
-        border-left: 6px solid yellow;
-        background: rgb(9, 9, 25);
-        cursor: pointer;
-        color: $white;
     }
 }
