--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -67,11 +67,11 @@ svg {
       // padding: 32px;
       @media (max-width: 768px) {
          // padding-left: 96px;
-         padding-left: 60px;
+         // padding-left: 60px;
 
       }
       @media (max-width: 475px) {
-         padding-left: 60px;
+         // padding-left: 60px;
       }
    }
 }
