--- a/src/components/Sidebar/sidebar-main.scss
+++ b/src/components/Sidebar/sidebar-main.scss
@@ -1,10 +1,10 @@
 .sidebar {
-   position: relative;
+   position: fixed;
    // z-index: 5;
    display: flex;
    flex-direction: column;
-   width: calc(2rem + 32px);
-   min-height: 100vh;
+   min-width: 100vw;
+   height: 50px;
    overflow: hidden;
    padding: 16px;
    backdrop-filter: blur(3px);
@@ -13,10 +13,10 @@
    box-shadow: 0 8px 32px rgb(2, 4, 24);
    border-right: 2px solid rgba(255, 255, 255, 0.09);
    transition: 0.2s ease-out;
-   @media (max-width: 768px){
-         position: fixed;
-         z-index: 100;
-   }
+   // @media (max-width: 768px){
+   //       position: fixed;
+   //       z-index: 100;
+   // }
    &.expanded {
       width: 300px;
 		.menu__toggle {
@@ -104,7 +104,11 @@
       }
 
    // .sidebar__body
-   &__body {}
+   &__body {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+   }
    // .sidebar__menu
    &__menu {}
 }
